--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,8 +1,8 @@
 #  The contact options.
 
 -
-  type: github
-  icon: 'fab fa-github'
+  type: instagram
+  icon: 'fab fa-instagram'
 -
   type: twitter
   icon: 'fab fa-twitter'
@@ -10,10 +10,7 @@
   type: email
   icon: 'fas fa-envelope'
   noblank: true            # open link in current tab
--
-  type: rss
-  icon: 'fas fa-rss'
-  noblank: true
+
 
 # Uncomment and complete the url below to enable more contact options
 # -
