--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,15 +1,15 @@
 #  The contact options.
 
--
-  type: instagram
-  icon: 'fab fa-instagram'
--
-  type: twitter
-  icon: 'fab fa-twitter'
--
-  type: email
-  icon: 'fas fa-envelope'
-  noblank: true            # open link in current tab
+# -
+#   type: instagram
+#   icon: 'fab fa-instagram'
+# -
+#   type: twitter
+#   icon: 'fab fa-twitter'
+# -
+#   type: email
+#   icon: 'fas fa-envelope'
+#   noblank: true            # open link in current tab
 
 
 # Uncomment and complete the url below to enable more contact options
